<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/act_dice"
        android:icon="@drawable/icon_dice"
        android:title="@string/throw_dice"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/act_shuffle"
        android:icon="@drawable/icon_shuffle"
        android:title="@string/shuffle"
        app:showAsAction="never" />
    <item
        android:id="@+id/act_reset_all"
        android:icon="@drawable/icon_reset"
        android:title="@string/reset_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/act_remove_all"
        android:icon="@drawable/icon_remove"
        android:title="@string/clear"
        app:showAsAction="never" />

    <item
        android:icon="@drawable/icon_info"
        android:id="@+id/act_info_main"
        android:title="@string/inf"
        app:showAsAction="never" />
</menu>