<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/f_edit_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_white_tint"
    tools:context=".fragment.EditFrag">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/f_edit_bg_white"
        android:layout_width="260dp"
        android:layout_height="320dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_accent"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/f_edit_header"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/add_player"
            android:gravity="center"
            android:src="@drawable/icon_edit"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/primary" />

        <EditText
            android:id="@+id/f_edit_et_name"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:autofillHints="0"
            android:fontFamily="@font/munchkin"
            android:gravity="center"
            android:hint="@string/new_name"
            android:inputType="textPersonName"
            android:maxLength="12"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textColorHint="@color/darkGrey"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/f_edit_header" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/f_edit_et_lvl"
            app:layout_constraintEnd_toStartOf="@id/f_edit_et_lvl"
            app:layout_constraintStart_toStartOf="@id/f_edit_et_name"
            app:layout_constraintBottom_toBottomOf="@id/f_edit_et_lvl"
            android:text="@string/level"
            android:fontFamily="@font/munchkin"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/f_edit_et_lvl"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/munchkin"
            android:gravity="center"
            android:hint="@string/_1"
            android:inputType="number"
            android:maxLength="2"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textColorHint="@color/darkGrey"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/f_edit_et_name"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/f_edit_et_name" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/f_edit_et_gear"
            app:layout_constraintEnd_toStartOf="@id/f_edit_et_gear"
            app:layout_constraintStart_toStartOf="@id/f_edit_et_name"
            app:layout_constraintBottom_toBottomOf="@id/f_edit_et_gear"
            android:text="@string/gear"
            android:fontFamily="@font/munchkin"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/f_edit_et_gear"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:autofillHints="0"
            android:fontFamily="@font/munchkin"
            android:gravity="center"
            android:hint="@string/_0"
            android:inputType="number"
            android:maxLength="2"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textColorHint="@color/darkGrey"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/f_edit_et_name"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/f_edit_et_lvl" />

        <TextView
            android:fontFamily="@font/munchkin"
            android:id="@+id/f_edit_b_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="6dp"
            android:layout_marginEnd="0dp"
            android:background="?selectableItemBackground"
            android:elevation="3dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:fontFamily="@font/munchkin"
            android:id="@+id/f_edit_b_ok"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="6dp"
            android:layout_marginStart="0dp"
            android:background="?selectableItemBackground"
            android:elevation="3dp"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>