<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical"
    android:background="?android:selectableItemBackground">


    <TextView
        android:textStyle="bold"
        android:textSize="26sp"
        android:fontFamily="@font/munchkin"
        android:id="@+id/i_main_list_tv_name"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="26sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="0dp"
        android:gravity="start"
        android:textColor="@color/black"
        tools:text="Player" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="@font/munchkin"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/darkGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/munchkin"
            android:textSize="18sp"
            android:text="@string/power"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/darkGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/icon_more"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black"
            android:contentDescription="@string/expand_player_s_card" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_weight="98"
            android:layout_height="75dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/bg_accent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/i_main_list_tv_lvl"
                    android:fontFamily="@font/munchkin"
                    android:layout_width="64dp"
                    android:layout_height="0dp"
                    android:autoSizeMaxTextSize="45sp"
                    android:autoSizeTextType="uniform"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:maxLines="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="8" />

                <ImageView
                    android:id="@+id/i_main_list_b_lvl_minus"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/minus"
                    android:layout_margin="6dp"
                    android:src="@drawable/icon_left"
                    app:tint="@color/primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/i_main_list_tv_lvl"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/i_main_list_b_lvl_plus"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="6dp"
                    android:background="?selectableItemBackground"
                    android:gravity="center"
                    android:src="@drawable/icon_right"
                    app:tint="@color/primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/i_main_list_tv_lvl"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/bg_accent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/i_main_list_tv_score"
                    android:layout_width="64dp"
                    android:layout_height="0dp"
                    android:autoSizeMaxTextSize="45sp"
                    android:autoSizeTextType="uniform"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:fontFamily="@font/munchkin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="17" />

                <ImageView
                    android:id="@+id/i_main_list_b_power_minus"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="?selectableItemBackground"
                    android:gravity="center"
                    android:layout_margin="6dp"
                    android:text="@string/minus"
                    android:src="@drawable/icon_left"
                    app:tint="@color/primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/i_main_list_tv_score"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/i_main_list_b_power_plus"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="6dp"
                    android:background="?selectableItemBackground"
                    android:gravity="center"
                    android:src="@drawable/icon_right"
                    app:tint="@color/primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/i_main_list_tv_score"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>

